chore: Adds the new supporting files and images to the project

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/topFragment"
-        android:name="co.jp.hivelocity.glay.TopFragment"
+        android:name="co.jp.hivelocity.glay.Fragments.TopFragment"
         android:label="fragment_top"
         tools:layout="@layout/fragment_top" />
 </navigation>
