--- a/app/src/main/res/layout/fragment_music_player.xml
+++ b/app/src/main/res/layout/fragment_music_player.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".glay.MusicPlayerFragment">
+    tools:context=".glay.Fragments.MusicPlayerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
