--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -19,6 +19,8 @@
         android:id="@+id/topMenuItemsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginBottom="60dp"
+        android:background="#090808"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
