--- a/app/src/main/res/layout/top_menu_item.xml
+++ b/app/src/main/res/layout/top_menu_item.xml
@@ -2,26 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#0E0505">
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:background="#000E0505">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_top_name"
         app:srcCompat="@drawable/top_icon_music" />
 
     <TextView
         android:id="@+id/tv_top_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Music"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:fontFamily="sans-serif"
+        android:paddingTop="10dp"
+        android:text="MUSIC"
+        android:textAlignment="center"
         android:textColor="@color/white"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
