feat: Movie list fetch api integration and view model handling

--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -10,7 +10,8 @@
         android:id="@+id/topImagesViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
+        android:background="#0C0C0C"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +34,7 @@
         android:id="@+id/topMenuItemsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:background="#00090808"
         android:clipToPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
