--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#A30808"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
