--- a/app/src/main/res/layout/music_streams_list_item.xml
+++ b/app/src/main/res/layout/music_streams_list_item.xml
@@ -20,13 +20,17 @@
 
     <TextView
         android:id="@+id/textViewSongName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="20dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="TextView"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewOptions"
         app:layout_constraintStart_toEndOf="@+id/textViewItemNumber"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,7 +58,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
